--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
   <script src="utils.js"></script>
   <script src="astro.js"></script>
   <script src="app.js"></script>
+  <script src="mittelschmerz_stats.js"></script>
   <script src="tips.js"></script>
 </body>
 </html>
