Update logo and remove title from header
Replaced title div with lunacy-wordmark image.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="brand" aria-label="Lunacy">
       <img src="logo.png" class="logoImg" alt="Lunacy Logo" />
       <div class="brandText">
-        <div class="title">Lunacy</div>
+        <img src="lunacy-wordmark.png" class="logoWordmark" alt="Lunacy Schriftzug" />
+		  <!--<div class="title">Lunacy</div>-->
         <div class="subtitle">Periodentracker • lokal auf deinem Gerät</div>
       </div>
     </div>
