Refactor brand section in index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <header class="topbar">
     <div class="brand" aria-label="Lunacy">
       <img src="logo.png" class="logoImg" alt="Lunacy Logo" />
-      <div class="brandText">
-        <img src="lunacy-wordmark.png" class="logoWordmark" alt="Lunacy Schriftzug" />
-		  <!--<div class="title">Lunacy</div>-->
-        <div class="subtitle">Periodentracker • lokal auf deinem Gerät</div>
-      </div>
+      <div class="brandRight">
+    <img src="lunacy-wordmark.png" class="logoWordmark" />
+    <div class="brandSubtitle">Periodentracker • lokal auf deinem Gerät</div>
+  </div>
     </div>
 
     <nav class="nav" aria-label="Navigation">
