--- a/index.html
+++ b/index.html
@@ -31,6 +31,52 @@
       <h2>Heute</h2>
       <p class="muted">Schnell-Logging: „Heute Blutung“ und Notizen. Du kannst auch rückwirkend eintragen – oder direkt einen Zeitraum setzen.</p>
 
+      <!-- Zyklus-Timeline (Sternschnuppe) -->
+      <div class="card inner cycleProgressCard hidden" id="cycleProgressCard" aria-live="polite">
+        <div class="cycleProgressTop">
+          <div style="flex:1;min-width:0;">
+            <div class="muted" id="cycleProgressKicker">Zyklus</div>
+            <div class="strong" id="cycleProgressHeadline">–</div>
+            <div class="muted" style="font-size:12px;margin-top:4px;" id="cycleProgressSub">–</div>
+          </div>
+          <div class="cycleProgressBadge" id="cycleProgressBadge">ZT –</div>
+        </div>
+
+        <div class="cycleProgressTrackWrap" aria-label="Zyklus Fortschritt">
+          <div class="cycleProgressTrack" id="cycleProgressTrack">
+            <div class="cycleProgressFill" id="cycleProgressFill"></div>
+
+            <!-- Goldener Stern: Eisprung -->
+            <div class="cycleMarker ovu" id="cycleMarkerOvu" aria-label="Eisprung (≈)">
+              <span class="star">★</span>
+            </div>
+
+            <!-- Sternschnuppe: Heute -->
+            <div class="cycleMarker today" id="cycleMarkerToday" aria-label="Heute">
+              <span class="meteor">✦</span>
+              <span class="tail" aria-hidden="true"></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="cycleProgressDates" id="cycleProgressDates">
+          <div class="cpDate left">
+            <div class="muted">Zyklusstart</div>
+            <div class="strong" id="cycleProgressStartDate">–</div>
+          </div>
+
+          <div class="cpDate ov" id="cycleProgressOvuWrap">
+            <div class="muted">Eisprung (≈)</div>
+            <div class="strong" id="cycleProgressOvuDate">–</div>
+          </div>
+
+          <div class="cpDate right">
+            <div class="muted">Nächster Zyklus</div>
+            <div class="strong" id="cycleProgressNextStart">–</div>
+          </div>
+        </div>
+      </div>
+
       
 
       <div class="grid2">
@@ -386,5 +432,6 @@
   <script src="icsExport.js"></script>
   <script src="mittelschmerz_stats.js"></script>
   <script src="tips.js"></script>
+  <script src="cycleProgress.js"></script>
 </body>
 </html>
