--- a/index.html
+++ b/index.html
@@ -161,11 +161,12 @@
     <!-- CALENDAR -->
     <section class="card view hidden" id="view-calendar">
       <div class="monthbar">
-        <button class="btn" id="prevBtn" type="button">‹</button>
+        <button class="btn monthNavBtn" id="prevBtn" type="button" aria-label="Vorheriger Monat">‹</button>
         <h2 id="monthTitle" class="center"></h2>
         <div class="monthbarRight">
+          <button class="btn monthTodayBtn" id="monthTodayBtn" type="button" title="Zurück zum aktuellen Monat">Heute</button>
           <button class="btn" id="shareSummaryBtn" type="button" title="Zusammenfassung als Bild teilen">Teilen</button>
-          <button class="btn" id="nextBtn" type="button">›</button>
+          <button class="btn monthNavBtn" id="nextBtn" type="button" aria-label="Nächster Monat">›</button>
         </div>
       </div>
 
@@ -223,6 +224,7 @@
             <div class="muted">Heute: Mini-Übersicht</div>
             <div class="strong" id="hormoneDetailsTitle">–</div>
             <div class="muted" style="font-size:12px;margin-top:4px;" id="hormoneDetailsMeta">Tippe auf eine Kategorie, um mehr zu lesen.</div>
+            <div class="hExplain" id="hormoneExplain" style="margin-top:10px;"></div>
           </div>
         </div>
         <div id="hormoneDetailsBody" class="hormoneDetailsBody" style="margin-top:10px;"></div>
@@ -237,7 +239,11 @@
       <h3 style="margin-top:14px;">Letzte 12 Zyklen inkl. Eisprung-Zyklustag</h3>
       <div id="last12"></div>
 
-      <p class="muted" style="margin-top:12px;">
+      
+
+      <h3 style="margin-top:14px;">Visualisierungen</h3>
+      <div id="statsCharts"></div>
+<p class="muted" style="margin-top:12px;">
         Hinweis: Eisprung/Fruchtbarkeit sind Näherungen. LH-positiv wird berücksichtigt (Eisprung ≈ LH+1 Tag).
       </p>
     </section>
@@ -246,6 +252,9 @@
     <section class="card view hidden" id="view-settings">
       <h2>Einstellungen</h2>
       <p class="muted">Diese Werte werden als Standard genutzt (du musst nicht jedes Mal Zykluslänge angeben).</p>
+
+      <!-- iPhone/Safari: gentle backup reminder (Files app) -->
+      <div id="iosBackupHint" class="card inner hidden" aria-live="polite"></div>
 
       <form id="settingsForm" class="form">
         <div class="grid2">
@@ -257,15 +266,20 @@
           </label>
         </div>
 
+        <label>Standard Eisprungtag (Zyklustag, optional)
+          <input type="number" id="setOvuDay" min="6" max="50" placeholder="z. B. 23" />
+        </label>
+
         <label class="inlineCheck">
           <input type="checkbox" id="setTtc" />
           Kinderwunsch aktiv (zeigt ET-/Sternzeichen-Infos & nimmt sie beim Teilen mit)
         </label>
 
-        <label>Standard Eisprungtag (Zyklustag, optional)
-          <input type="number" id="setOvuDay" min="6" max="50" placeholder="z. B. 23" />
+        <label>Warnungen erneut zeigen nach (Monate)
+          <input type="number" id="setWarnSnoozeMonths" min="1" max="24" value="6" />
         </label>
-
+		
+		
         <div class="grid2">
           <label>Mutter Sternzeichen (optional)
             <select id="setMotherSign">
@@ -330,6 +344,47 @@
 
         <div class="muted" style="margin-top:8px;font-size:12px;">
           Tipp: Wenn du nur sichern willst, nutze Export. Beim Import werden doppelte IDs automatisch übersprungen.
+        </div>
+      </div>
+
+      <div class="card inner" style="margin-top:12px;">
+        <div class="strong">Auto-Backup (Datei)</div>
+        <p class="muted" style="margin:6px 0 10px;font-size:12px;">
+          Sichert deine Daten als <span class="strong">Datei außerhalb des Browsers</span> (Standardname: <span class="strong">lunacy-backup.json</span>).
+          In Chrome/Edge wird die Datei automatisch überschrieben. Auf iPhone/Safari nutzt du „In Dateien sichern“.
+        </p>
+
+        <div class="grid2">
+          <button class="btn primary" type="button" id="backupEnableBtn">Auto-Backup aktivieren</button>
+          <button class="btn" type="button" id="backupNowBtn">Backup jetzt schreiben</button>
+        </div>
+
+        <div class="grid2" style="margin-top:10px;">
+          <button class="btn" type="button" id="backupShareBtn">iPhone: In Dateien sichern</button>
+          <button class="btn danger" type="button" id="backupDisableBtn">Deaktivieren</button>
+        </div>
+
+        <div class="muted" id="backupStatus" style="margin-top:10px;font-size:12px;">Status: –</div>
+
+        <div class="muted" style="margin-top:8px;font-size:12px;">
+          Tipp iPhone: Speichere in „Dateien“ (z. B. iCloud Drive) und überschreibe die Datei bei Bedarf. Import geht unten.
+        </div>
+      </div>
+
+      <div class="card inner" style="margin-top:12px;">
+        <div class="strong">Backup importieren (JSON)</div>
+        <p class="muted" style="margin:6px 0 10px;font-size:12px;">
+          Importiert eine zuvor gesicherte <span class="strong">lunacy-backup.json</span>.
+        </p>
+        <div class="grid2">
+          <label style="gap:6px;">
+            <span class="muted" style="font-size:12px;">Backup-Datei auswählen</span>
+            <input type="file" id="importBackupFile" accept="application/json,.json" />
+          </label>
+          <label class="inlineCheck" style="align-items:center;">
+            <input type="checkbox" id="importBackupReplace" />
+            Beim Import vorhandene Daten ersetzen
+          </label>
         </div>
       </div>
 
@@ -428,9 +483,12 @@
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="utils.js"></script>
   <script src="astro.js"></script>
+  <script src="backup.js"></script>
   <script src="app.js"></script>
+  <script src="stats_charts.js"></script>
   <script src="icsExport.js"></script>
   <script src="mittelschmerz_stats.js"></script>
+  <script src="warnings.js"></script>
   <script src="tips.js"></script>
   <script src="cycleProgress.js"></script>
 </body>
